--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
                                 <div class="text-list__third-list">
                                     <ul class="list-third">
-                                       <li class="list-third__item"><mark href="">ins element</mark></li>
+                                       <li class="list-third__item"><mark>ins element</mark></li>
                                        <li class="list-third__item"><mark >mark element</mark></li>
                                        <li class="list-third__item"><q>q ‘inside’ a q element </q></li>
                                        <li class="list-third__item"><abbr >abbr element</abbr></li>
